<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.lk.hotelcheck.MainActivity" >
 
             <item
                android:id="@+id/menu_check_done"
                android:icon="@drawable/right"
                android:showAsAction="always"
                android:title="@string/check_done"/>
            <item
                android:id="@+id/menu_upload_data"
                android:icon="@drawable/upload"
                android:showAsAction="always"
                android:title="@string/upload_data"/>
            <item
                android:id="@+id/menu_chose_image_upload"
                android:icon="@drawable/pic"
                android:showAsAction="always"
                android:title="@string/chose_image_upload"/>
            <item
                android:id="@+id/menu_check_image_transfer_speed"
                android:icon="@drawable/trans"
                android:showAsAction="always"
                android:title="@string/check_image_transfer_speed"/>
       
  
           

</menu>